--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,1 +1,1 @@
-*{background:#ccc}.box{width:100%}
+*{margin:0;padding:0;background:pink}.wrap{width:100%;display:flex;flex-direction:column}header{width:100%;height:pxTorem(45px);background:#ccc}.con{width:100%;flex:1;overflow-y:scroll;-webkit-overflow-scrolling:touch}.swiper-slide{display:flex;flex-wrap:wrap}.swiper-slide dl{width:20%}.swiper-slide dl dt{width:40px;height:40px;margin:10px auto}.swiper-slide dl dt img{width:100%;height:100%}.swiper-slide dl dd{text-align:center}
