--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,7 +1,44 @@
 * {
-    background: #ccc
+    margin: 0px;
+    padding: 0px;
+    background: pink
 }
 
-.box {
+.wrap {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+header {
+    width: 100%;
+    height: pxTorem(45px);
+    background: #ccc;
+}
+
+.con {
+    width: 100%;
+    flex: 1;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+}
+
+.swiper-slide {
+    display: flex;
+    flex-wrap: wrap;
+    dl {
+        width: 20%;
+        dt {
+            width: 40px;
+            height: 40px;
+            margin: 10px auto;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        dd {
+            text-align: center;
+        }
+    }
 }
